--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,15 @@
 {
-  "short_name": "Struggle",
-  "name": "Struggle | Bitcoin Dice",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64",
-      "type": "ico"
-    },
-    {
-      "src": "android-chrome-36x36.png",
-      "sizes": "36x36",
-      "type": "images/png",
-      "density": 1
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
     }
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#7c5cd1",
-  "background_color": "#f4f2fc"
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
